@@ -1,9 +1,15 @@
+2006-12-06  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclCompCmds.c:	Revised and consolidated into utility
+	* tests/mathop.c:		routines some of routines that compile
+	the new TIP 174 commands.  This corrects some known bugs.  More to come.
+
 2006-12-06  Kevin Kenny  <kennykb@acm.org>
 
 	* tests/expr.test (expr-47.12): Improved error reporting in hopes
 	of having more information to pursue [Bug 1609936].
 	
-2006-11-28  Andreas Kupries  <andreask@activestate.com>
+2006-12-05  Andreas Kupries  <andreask@activestate.com>
 
 	TIP#291 IMPLEMENTATION
 
